= CHANGES

== 0.9.15 (Unreleased)

* Fixes issue with invalid class on form fields [Thanks RichGuk!]
* Adds a span around 'required' note for form fields
* Fixes padrino bin command to properly display help

== 0.9.14

* Application generator should create public subfolder
* Refactored application mounter class
* Updated mongomapper to use bson_ext
* Use entity code instead of copyright symbol
* Ensure app generation creates own public folder
* Fixed padrino g alias
* Fixed distance_of_time_in_words helper [Thanks to Yannick Koechlin]

== 0.9.13

* Fixed a problem with padrino g the alias of padrino-gen
* Fixed a naming bug in relation to using classify to manipulate project name
* Refactored and enhanced rake routes (and rake routes:app)

== 0.9.12

* Deprecated mount_core and remove references
* Fixed problem with czech translation file
* Fixed a problem with routes with same path but different verbs and provides

== 0.9.11

* Fixed provides with IE
* DM 1.0 and AR Tasks compat
* Fixed DM 1.0 rake tasks
* Dropped support of :respond_to in favor of :provides
* Added provides in controller level App.controller :provides => [:json, :xml]
* Added compatibility with AS 3.0
* Fixed compatibility with DM 1.0
* Improves dependencies in a Gemfile and autoinjected into gemspecs
* Allow models to be generated in subapps with --app flag
* Added bundler support also for testing [Thanks to Ryanfitz]
* Updated I18n dependency to version > 0.4.0
* Padrino now uses http_router instead of usher to handle url routing
* Reorganized a bit ours "servers"
* Added support for easily adding custom dependency paths with Padrino.custom_dependencies("...")
* Padrino::Application.run! now perform Padrino.load! automatically (useful if you want to use MyApp.run!)
* PADRINO_ROOT if not defined will be automatically detected
* Improved reloader (that fixes also problems with MM)
* Core refactoring
* Fixed mounter in certain scenarios (i.e. single app file)