@@ -5,6 +5,7 @@
 * Fixes issue with invalid class on form fields [Thanks RichGuk!]
 * Adds a span around 'required' note for form fields
 * Fixes padrino bin command to properly display help
+* Stores component file in project after choices are validated
 
 == 0.9.14
 
